Fix hero section layout on mobile and desktop
Using flexbox

--- a/_scss/components/_hero.scss
+++ b/_scss/components/_hero.scss
@@ -1,20 +1,32 @@
-.hero__wrapper {
+.hero {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  height: 100%;
-  min-height: 450px;
-  padding: 0;
+  align-items: center;
+  height: 100vh;
   background-color: $black;
   color: $white;
   overflow: hidden;
+  padding: 0;
+}
+
+.hero__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  color: $white;
+  position: relative;
+
+  .hero__heading {
+    text-align: left;
+    margin: 0;
+    font-size: 120px;
+    letter-spacing: 7px;
+  }
 
   .hero__text {
     text-align: left;
-  }
-
-  .center_text_heading{
-    text-align: center;
   }
 
   .hero__input {
@@ -30,30 +42,12 @@
     font-size: 22px;
   }
 
-  .revuc-logo-res {
-    display: none;
-  }
-
   .revuc-logo {
     max-width: 11.6vw;
     min-width: 32px;
     position: absolute;
-    left: -15vw;
-    top: 5vh;
-  }
-}
-
-.hero {
-  display: flex;
-  flex-direction: row;
-  z-index: 2;
-  color: $white;
-
-  .hero__heading {
-    text-align: left;
-    margin: 0;
-    font-size: 120px;
-    letter-spacing: 7px;
+    top: 2em;
+    left: -12em;
   }
 
   .hero__button {
@@ -63,46 +57,34 @@
   }
 }
 
-
 // Email pre-reg styles
-.submit-success, .submit-error {
-    display: none;
+.submit-success,
+.submit-error {
+  display: none;
 }
 
 // Responsive design
 
 @media (max-width: $large-breakpoint) {
-
   .hero {
-    #hero-text-wrapper {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-    }
-
-    .revuc-logo {
-      display: none;
-    }
-
-    .revuc-logo-res {
-      display: inline;
-      max-width: 100px;
-    }
-
     .hero__heading {
       font-size: 80px;
       text-align: center;
     }
 
-    .hero__text  {
+    .hero__text {
       text-align: center;
       font-size: 24px;
     }
 
     .hero__input {
       font-size: 24px;
+    }
+
+    .revuc-logo {
+      position: static;
+      text-align: center;
+      min-width: 100px;
     }
 
     #email-notification {
@@ -131,7 +113,6 @@
     .hero__text {
       font-size: 20px;
     }
-
   }
 }
 
@@ -202,9 +183,11 @@
   }
 }
 */
-.particles-js-absolute {
+#particles-js {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
 }
